# stac-utils.github.io

./: LICENSE  README.md  config.toml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: pages.yml
data/: repositories.json
docs/: ai-contribution-policy.md  index.md
scripts/: build  get_repositories.py  render.py
scripts/templates/: index.md.jinja2  table.md.jinja2
