[project]
name = "stac-utils-github-io"
version = "0.0.0"
description = "Simple Python package for building https://stac-utils.github.io. Not meant for distribution."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "zensical>=0.0.32",
]
